--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Hide YouTube Endscreen",
-  "version": "1.1.0",
-  "description": "Hides YouTube endscreen so you don't miss the climax part of the music video or movie clip",
+  "name": "Hide YouTube End Cards",
+  "version": "1.3.0",
+  "description": "Hides YouTube end cards so you don't miss the climax part of the music video or movie clip",
   "permissions": ["declarativeContent"],
   "background": {
     "scripts": ["background.js"],
